--- a/DistanceB2U/DistanceB2U.csproj
+++ b/DistanceB2U/DistanceB2U.csproj
@@ -5,4 +5,11 @@
   </PropertyGroup>
 
 
+  <ItemGroup>
+    <PackageReference Include="RestSharp" Version="106.11.4" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
 </Project>
