--- a/DistanceB2U/Properties/launchSettings.json
+++ b/DistanceB2U/Properties/launchSettings.json
@@ -23,7 +23,8 @@
       "launchUrl": "weatherforecast",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "BASE_ENDPOINT": "https://my-json-server.typicode.com/vdonoso007/DistanceBetween"
       }
     }
   }
