--- a/DistanceB2U/Properties/launchSettings.json
+++ b/DistanceB2U/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
@@ -21,11 +21,11 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "BASE_ENDPOINT": "https://my-json-server.typicode.com/vdonoso007/DistanceBetween"
-      }
+        "BASE_ENDPOINT": "https://my-json-server.typicode.com/vdonoso007/DistanceBetween",
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
